K8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: sscrip/bu-gateway:v1.0.1
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: biblioteca
spec:
  selector:
    app: gateway
  ports:
    - port: 8088
      targetPort: 8088
