K8s/ms-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers:
        - name: ms-auth
          image: sscrip/bu-auth:v1.0.1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ms-auth
  namespace: biblioteca
spec:
  selector:
    app: ms-auth
  ports:
    - port: 8081
      targetPort: 8081
