K8s/ms-catalogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-catalogo
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-catalogo
  template:
    metadata:
      labels:
        app: ms-catalogo
    spec:
      containers:
        - name: ms-catalogo
          image: sscrip/bu-catalogo:v1.0.0
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: ms-catalogo
  namespace: biblioteca
spec:
  selector:
    app: ms-catalogo
  ports:
    - port: 8083
      targetPort: 8083
