K8s/ms-devoluciones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-devoluciones
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-devoluciones
  template:
    metadata:
      labels:
        app: ms-devoluciones
    spec:
      containers:
        - name: ms-devoluciones
          image: sscrip/bu-devoluciones:v1.0.0
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ms-devoluciones
  namespace: biblioteca
spec:
  selector:
    app: ms-devoluciones
  ports:
    - port: 8084
      targetPort: 8084
