K8s/ms-prestamos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-prestamos
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-prestamos
  template:
    metadata:
      labels:
        app: ms-prestamos
    spec:
      containers:
        - name: ms-prestamos
          image: sscrip/bu-prestamos:v1.0.0
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ms-prestamos
  namespace: biblioteca
spec:
  selector:
    app: ms-prestamos
  ports:
    - port: 8082
      targetPort: 8082
